Bug 127734 - FILESAVE DOCX Hyperlink does not work when the target is section
Summary: FILESAVE DOCX Hyperlink does not work when the target is section
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Shapes DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-09-24 07:28 UTC by NISZ LibreOffice Team
Modified: 2019-10-16 20:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODT file from Writer. (8.54 KB, application/binary)
2019-09-24 07:29 UTC, NISZ LibreOffice Team
Details
The original file saved as DOCX. (13.63 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-24 07:29 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-24 07:28:33 UTC
Description:
Hyperlink with internal section target in DOCX documents created with Writer is broken.

Steps to Reproduce:
    1. Create a document in LibreOffice.
    2. Insert a page break and a section.
    3. Click in the section and type text.
    4. Click on the first page.
    5. Insert a hyperlink and set the section as the target of the hyperlink.
    6. Save the document in DOCX format.
    7. Reload the file.

Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work after export.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 0d90da9ea0a23c9c4afac62025208559b1496a0e
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-09-24 07:29:02 UTC
Created attachment 154404 [details]
Example ODT file from Writer.
Comment 2 NISZ LibreOffice Team 2019-09-24 07:29:20 UTC
Created attachment 154405 [details]
The original file saved as DOCX.
Comment 3 Dieter 2019-09-25 06:18:11 UTC
I confirm it with

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 4 Commit Notification 2019-09-30 11:02:12 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7046846f840fb087cdda677a0e29461adca843aa

tdf#127734 DOCX export: fix internal hyperlinks to section target

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2019-10-16 20:23:46 UTC
Verified with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 758516295e5f69393bd78bb4af6e7214d48ece0b
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Tünde, thanks for fixing it!