tdf#127734 DOCX export: fix internal hyperlinks to section target

Hyperlinks with internal section targets didn't work after export.

Change-Id: I355091193f9b7f92d3fec77ee7d8a27bfd981724